[package]
name = "navx"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>", "Josh Hejna <josh.hejna@gmail.com>"]

[dependencies]
wpilib = "0.2.3"
libc = "0.2.43"
byteorder = "1.2.6"
parking_lot = {version = "0.6.4", features = ["nightly"]}
derive_more = "0.11.0"
shrinkwraprs = "0.2.0"
crossbeam-channel = "0.2"

[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "./target"
