[package]
name = "navx"
version = "0.1.1"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>", "Josh Hejna <josh.hejna@gmail.com>"]

[features]
nightly = ["parking_lot/nightly"]

[dependencies]
byteorder = "1.2.6"
crossbeam-channel = "0.2"
derive_more = "0.11.0"
lazy_static = "1.2.0"
libc = "0.2.43"
parking_lot = "0.6.4"
shrinkwraprs = "0.2.0"
wpilib = "0.3"

[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "./target"
